# microservices-learn

./: Cargo.toml
services/auth_services/: Cargo.toml
services/auth_services/migrations/: 20251017154615_create_roles_table.sql  20251017154749_create_users_table.sql
services/auth_services/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  seeder.rs
services/product_services/: Cargo.toml
services/user_services/: Cargo.toml
services/user_services/migrations/: 20251015101552_create_users_table.sql
services/user_services/src/: .env.example  db.rs  handlers.rs  lib.rs  main.rs  models.rs  seeder.rs
shared_libs/common/: Cargo.toml
shared_libs/common/src/: lib.rs
shared_libs/shared_types/: Cargo.toml
shared_libs/shared_types/src/: lib.rs
