[package]
name = "user_services"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
shared_types = { path = "../../shared_libs/shared_types" }
serde = { version = "1.0", features = ["derive"] }

